<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="enter_product_detail">ENTER PRODUCT DETAIL</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="enter_purchase_date">Select Purchase Date</string>

    <string name="submit">Submit</string>
    <string name="name_error">Name can\'t be empty</string>
    <string name="price_error">Price can\'t be empty</string>
    <string name="quantity_error">Quantity can\'t be empty</string>
    <string name="date_error">Date can\'t be empty</string>
    <string name="price_value_error">Price can\'t be less than 1</string>
    <string name="quantity_value_error">Quantity can\'t be less than 1</string>
    <string name="add_item_list">There are no items on the list. Click on the add button and add the items to your list.</string>
    <string name="add_product">Add Product</string>
    <string name="action_delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="not_less_than_zero">Quantity of product cant\'t be less than zero</string>
    <string name="detail">Detail</string>
    <string name="product_detail">Product Detail</string>
    <string name="order">Order</string>
    <string name="product_ordered">Your product has been ordered from the supplier :)</string>
    <string name="delete_product">Delete Product?</string>
    <string name="will_delete_record">Selecting Yws will permanently delete the record.</string>
    <string name="deleted">Product record deleted.</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="phone_error">Phone number can\'t be empty</string>
    <string name="image_select">Please select a image for the product</string>
    <string name="four">4</string>
    <string name="add_image">Click on add button to set the image</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>

</resources>
